network-policy/base/cilium/global-policies/apiserver.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-apiserver-allow
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  endpointSelector: {}
  egress:
    - toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
      toCIDR:
      - 10.69.0.0/16
