network-policy/base/cilium/global-policies/ingress-cluster-allow.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ingress-cluster-allow
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
      - cluster
    - fromCIDRSet:
      - cidr: 10.64.0.0/14
      - cidr: 10.68.0.0/16
      - cidr: 10.69.0.0/16
      - cidr: 10.72.0.0/16
      - cidr: 10.76.0.0/16
      - cidr: 10.78.0.0/16
